# llm_comp_graph

./: .env.example  .gitignore  LLAMA_SETUP.md  RAG example.md  README.md  linux_cpu.sh  linux_gpu.sh  llama_env.sh  mac_metal.sh  pyproject.toml  pyproject.yaml  pyrightconfig.json  requirements.txt  setup_llama.sh  test_10k.py
data/10k/AAPL/2023/: AAPL_0000320193_2023-11-03_0000320193-23-000106.plain.txt
data/10k/AAPL/2024/: AAPL_0000320193_2024-11-01_0000320193-24-000123.plain.txt
data/10k/MSFT/2023/: MSFT_0000789019_2023-07-27_0000950170-23-035122.plain.txt
data/10k/MSFT/2024/: MSFT_0000789019_2024-07-30_0000950170-24-087843.plain.txt
data/10k/MSFT/2025/: MSFT_0000789019_2025-07-30_0000950170-25-100235.plain.txt
data/q10/AAPL/2023/: AAPL_0000320193_2023-02-03_0000320193-23-000006.plain.txt  AAPL_0000320193_2023-05-05_0000320193-23-000064.plain.txt  (+1 more)
docs/: create_llama_index.md
llama_index/chroma_db/: chroma.sqlite3
scripts/: README.md  assess_answers.py  create_llama_index.py  create_llama_index_advanced.py  download_10K.py  download_10Q.py  evaluate_qa_against_gold.py  generate_questions.py  search_llama_index.py  test_model_qa.py
scripts/download/: README.md  __init__.py  download_10K.py
scripts/setup/: common_setup.sh  linux_cpu.sh  linux_gpu.sh  mac_metal.sh
scripts/utils/: README.md  __init__.py
src/llm_comp_graph/: constants.py
src/llm_comp_graph.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/llm_comp_graph/download/: constants.py  core.py
src/llm_comp_graph/utils/: logging_config.py
(+14 files in other folders)
